# GraphicsLab2

./: CMakeLists.txt
cmake/Modules/: FindGLFW.cmake
include/: Camera.h  GLprogram.h  Shader.h
include/elements/: Dodecahedron.h  Elements.h  Figure.h  Graph.h  Octahedron.h
shaders/: shader.fs  shader.vs  shader_for_plot.fs
src/: Camera.cpp  GLprogram.cpp  Shader.cpp  main.cpp
src/elements/: Dodecahedron.cpp  Elements.cpp  Figure.cpp  Graph.cpp  Octahedron.cpp
